# misis2024s-21-03-ziyangirov-r-r

./: .gitignore  CMakeLists.txt  README.md  status.md
prj.cw/: CMakeLists.txt  image.json  image2.json  main.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  lab01.cpp
prj.lab/lab02/: lab02.cpp
prj.lab/lab03/: CMakeLists.txt  lab03.cpp  report.md
prj.lab/lab04/: CMakeLists.txt  lab04.cpp  report.md
prj.lab/lab04/input/: ground_truth.json
prj.lab/lab04/output/: ground_detections.json
prj.lab/lab05/: CMakeLists.txt  lab05.cpp  report.md
prj.lab/lab06/: CMakeLists.txt
prj.lab/lab07/: CMakeLists.txt  lab07.cpp  report.md
prj.lab/lab08/: CMakeLists.txt  lab08.cpp  report.md
prj.lab/lab09/: CMakeLists.txt  lab09.cpp  report.md
